tests/type-errors/no_arg_partition.arl
archetype no_arg_partition

asset et identified by cid { cid: int; }

asset e identified by eid {
	eid			: string;
	cells		: et partition;
}

entry start (cl: et partition) {
	effect {
		var ev : e = { eid = "123"; cells = cl };
	}
}
